# ralf-conv

./: .gitignore  PACKAGING.md  debug.bat  example.bat  pyproject.toml  ralf-conv-cli.spec  test.bat  update.bat
.github/workflows/: release.yml
example/: demo_soc.ralf
src/: __main__.py  field_layout.py  flatten.py  hierarchy.py
src/ralf_conv/: __init__.py  cli.py  flatten.py
tests/: test_cli.py  test_flatten.py  test_hierarchy.py  test_include_sources.py
tests/fixtures/: demo_soc.ralf  demo_system.ralf
tests/fixtures/include_merge/inc/: extra_blocks.ralf
tests/fixtures/include_merge/root/: top.ralf
tools/: README.md  bundle_release.py  ci_pack_ubuntu16.sh  ci_pack_windows.bat  ci_pack_windows.ps1  pack.bat  pack.sh  pyi_main.py
