[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ralf-conv"
version = "0.0.0"
description = "使用 ralf_model 将 RALF 解析并展开为扁平寄存器 JSON"
requires-python = ">=3.10"
dependencies = ["python-library-ralf-model==0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.package-dir]
ralf_conv = "src"

[tool.setuptools]
packages = ["ralf_conv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
